examples/test/testpolicy7905.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy7905
  namespace: namespace276
spec:
  podSelector:
    matchLabels:
      key11: value12
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key35: value42
          key2: value11
          key40: value28
      podSelector:
        matchLabels:
          key30: value31
